--- a/views/index.html
+++ b/views/index.html
@@ -11,31 +11,31 @@
     />
     <meta name="author" content="Titanium Network" />
     <meta name="generator" content="Fastify, HTML5" />
-    <meta name="application-name" content="Holy Unblocker LTS" />
-    <link rel="canonical" href="https://holyunblocker.org/" />
+    <meta name="application-name" content="EduMaths" />
+    <link rel="canonical" href="https://EduMaths/" />
     }}
     <title>
-      {{mask}}{{Holy Unblocker LTS | Secure & Free Web Proxy Service}}
+      {{mask}}{{EduMaths}}
     </title>
     {{ifSEO}}{{
     <meta
       name="description"
-      content="Holy Unblocker LTS is a cutting-edge web proxy service designed to bypass web filters and blockers. Whether dealing with client-side or network-based censorship, Holy Unblocker LTS provides seamless access to blocked sites and secure, private browsing on devices like Chromebooks. Overcome content blockers, Chrome extensions, firewalls, and more with our advanced proxy solution."
+      content="EduMaths"
     />
     <meta
       name="keywords"
-      content="web proxy, free web proxy, proxy web browser, proxy web, proxy web page, proxy for web, secure proxy, unblock websites, free proxy, bypass censorship, unblock Chromebook, proxy service, online security, private browsing, unblock social media, access blocked content, Titanium Network, proxy server, internet freedom, unblock at school, unblock at work"
+      content="EduMaths"
     />
-    <meta property="og:site_name" content="Holy Unblocker LTS" />
-    <meta property="og:url" content="https://holyunblocker.org/" />
+    <meta property="og:site_name" content="EduMaths" />
+    <meta property="og:url" content="https://EduMaths/" />
     <meta
       property="og:title"
-      content="Holy Unblocker LTS | Secure & Advanced Web Proxy Service"
+      content="EduMaths"
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Holy Unblocker LTS is a top-tier web proxy service that bypasses network and browser restrictions to access blocked websites securely. Enjoy a seamless browsing experience with robust security and advanced features."
+      content="EduMaths"
     />
     }}
     <meta property="og:image" content="{{route}}{{assets/img/hero.webp}}" />
@@ -44,21 +44,21 @@
       content="{{route}}{{assets/img/hero.webp}}"
     />
     {{ifSEO}}{{
-    <meta property="og:image:alt" content="Holy Unblocker Logo" />
+    <meta property="og:image:alt" content="EduMaths Logo" />
     <meta property="og:locale" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@titaniumnetdev" />
     <meta name="twitter:creator" content="@titaniumnetdev" />
     <meta
       name="twitter:title"
-      content="Holy Unblocker LTS | Secure & Advanced Web Proxy Service"
+      content="EduMaths"
     />
     <meta
       name="twitter:description"
-      content="Discover Holy Unblocker LTS, a premier web proxy service that bypasses censorship and filters to provide secure access to blocked websites. Ideal for private browsing and overcoming network restrictions on devices like Chromebooks."
+      content="EduMaths"
     />
     <meta name="twitter:image" content="{{route}}{{assets/img/hero.webp}}" />
-    <meta name="twitter:image:alt" content="Holy Unblocker Icon" />
+    <meta name="twitter:image:alt" content="EduMaths Icon" />
     }}
     <meta name="msapplication-TileColor" content="#b4213b" />
     <meta
@@ -71,7 +71,7 @@
       content="black-translucent"
     />
     {{ifSEO}}{{
-    <meta name="apple-mobile-web-app-title" content="Holy Unblocker LTS" />
+    <meta name="apple-mobile-web-app-title" content="EduMaths" />
     }}
     <!--HEAD-CONTENT-->
     <script
@@ -97,10 +97,10 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Holy Unblocker LTS",
-        "alternateName": "Holy Unblocker (Titanium Network)",
-        "url": "https://holyunblocker.org",
-        "logo": "https://holyunblocker.org/assets/img/logo_github.png",
+        "name": "EduMaths",
+        "alternateName": "EduMaths",
+        "url": "https://EduMaths",
+        "logo": "https://EduMaths/assets/img/logo_github.png",
         "sameAs": [
           "https://github.com/titaniumnetwork-dev",
           "https://twitter.com/titaniumnetdev",
@@ -110,7 +110,7 @@
           "https://www.linkedin.com/company/holyunblocker",
           "https://www.instagram.com/holyunblocker"
         ],
-        "description": "Holy Unblocker is an advanced web proxy service designed to bypass network censorship and filters, providing a secure and private browsing experience. It supports a wide range of websites, including YouTube, and receives frequent updates to ensure optimal performance.",
+        "description": "EduMaths",
         "founder": {
           "@type": "Person",
           "name": "Quite A Fancy Emerald"
@@ -120,9 +120,9 @@
           "@type": "ContactPoint",
           "contactType": "Customer Support",
           "email": "8xz62b0ce@mozmail.com",
-          "url": "https://holyunblocker.org/credits"
+          "url": "https://EduMaths/credits"
         },
-        "keywords": "proxy, web proxy, unblock websites, unblock Chromebook, free web proxy, proxy list, proxy sites, unblock Chromebook, online proxy, proxy server, proxy site, proxy YouTube, bypass Securly, bypass iBoss, bypass Lightspeed filter, Holy Unblocker, Chromebooks, Titanium Network, unblock YouTube, YouTube proxy, unblocked YouTube, YouTube unblocked, anonymous browsing, internet freedom, web censorship, school proxy, work proxy, secure proxy, fast proxy, private proxy, unblock social media, access blocked sites, bypass network restrictions"
+        "keywords": "EduMaths"
       }
     </script>
     <script type="application/ld+json">
@@ -132,18 +132,18 @@
         "mainEntity": [
           {
             "@type": "Question",
-            "name": "What is Holy Unblocker?",
+            "name": "What is EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker is a free and secure web proxy service designed to bypass web filters and blockers. It supports numerous sites, emphasizing detailed design, mechanics, and advanced features to provide a seamless browsing experience."
+              "text": "EduMaths"
             }
           },
           {
             "@type": "Question",
-            "name": "How do I unblock websites at school using Holy Unblocker?",
+            "name": "EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "To unblock websites at school, use Holy Unblocker, a free web proxy service that is frequently updated. If a site gets blocked, join the Titanium Network Discord to request a new site. Monthly restocks help prevent mass blocking."
+              "text": "EduMaths"
             }
           },
           {
@@ -762,7 +762,7 @@
               class="hero"
               src="{{route}}{{/assets/img/git.webp}}"
               alt="Contributing GitHub Icon"
-              title="{{mask}}{{Contribute to Holy Unblocker LTS on GitHub}}"
+              title="{{mask}}{{Contribute to EduMaths on GitHub}}"
             />
           </div>
         </div>
@@ -790,7 +790,7 @@
               <div class="brand-logo-container">
                 <i class="far fa-window-restore palered"></i>
                 <h2 class="hero-content-header">
-                  {{mask}}{{100% Free Web Proxy Browsing.}}
+                  {{mask}}{{EduMaths.}}
                 </h2>
               </div>
               <p>
@@ -808,7 +808,7 @@
                 </h2>
               </div>
               <p>
-                {{mask}}{{ Using Holy Unblocker LTS, you can access the Tor
+                {{mask}}{{ Using EduMaths, you can access the Tor
                 network directly within your Chromium-based/Firefox-based
                 browser. This allows you to browse the web anonymously,
                 bypassing any regional restrictions. This project also supports
