--- a/views/index.html
+++ b/views/index.html
@@ -407,7 +407,7 @@
               src="{{route}}{{/assets/img/logo-light.webp}}"
               alt="icon"
             />
-            <h1>{{mask}}{{Holy Unblocker LTS}}</h1>
+            <h1>{{mask}}{{EduMaths}}</h1>
             <h2>Free and transparent for use</h2>
             <a class="fancybutton glowbutton" href="{{route}}{{/browsing}}"
               >Browse Now</a
