--- a/views/index.html
+++ b/views/index.html
@@ -105,10 +105,10 @@
           "https://github.com/titaniumnetwork-dev",
           "https://twitter.com/titaniumnetdev",
           "https://www.youtube.com/channel/UC6LaREFvs9L72SK1s2PcxNg",
-          "https://holyunblocker.org",
-          "https://www.facebook.com/holyunblocker",
-          "https://www.linkedin.com/company/holyunblocker",
-          "https://www.instagram.com/holyunblocker"
+          "https://EduMaths.org",
+          "https://www.facebook.com/EduMaths",
+          "https://www.linkedin.com/company/EduMaths",
+          "https://www.instagram.com/EduMaths"
         ],
         "description": "EduMaths",
         "founder": {
@@ -148,31 +148,31 @@
           },
           {
             "@type": "Question",
-            "name": "What websites can I access with Holy Unblocker?",
+            "name": "What websites can I access with EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker allows access to a wide variety of websites, including popular sites like Discord, Spotify, YouTube, and many game sites."
+              "text": "EduMaths allows access to a wide variety of websites, including popular sites like Discord, Spotify, YouTube, and many game sites."
             }
           },
           {
             "@type": "Question",
-            "name": "Is Holy Unblocker safe to use?",
+            "name": "Is EduMaths safe to use?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Absolutely! Holy Unblocker ensures a safe browsing experience by not collecting or logging any user data. Refer to our Privacy Policy for more details. Additionally, Holy Unblocker is open-source, ensuring full transparency."
+              "text": "Absolutely! EduMaths ensures a safe browsing experience by not collecting or logging any user data. Refer to our Privacy Policy for more details. Additionally, EduMaths is open-source, ensuring full transparency."
             }
           },
           {
             "@type": "Question",
-            "name": "Does Holy Unblocker hide my search history?",
+            "name": "Does EduMaths hide my search history?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes, Holy Unblocker hides your search history. You can customize your tab appearance via Settings > Tab Cloak and use Stealth mode for private browsing."
+              "text": "Yes, EduMaths hides your search history. You can customize your tab appearance via Settings > Tab Cloak and use Stealth mode for private browsing."
             }
           },
           {
             "@type": "Question",
-            "name": "How can I get more Holy Unblocker sites?",
+            "name": "How can I get more EduMaths sites?",
             "acceptedAnswer": {
               "@type": "Answer",
               "text": "Join the Titanium Network Discord at discord.gg/unblock and type \"/proxy\" in our bots channel to receive a new site via DMs from our bot."
@@ -180,47 +180,47 @@
           },
           {
             "@type": "Question",
-            "name": "Is Holy Unblocker open-source?",
+            "name": "Is EduMaths open-source?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes, Holy Unblocker is open-source. Visit our GitHub to deploy or host your own instance of Holy Unblocker, ensuring maximum privacy control."
+              "text": "Yes, EduMaths is open-source. Visit our GitHub to deploy or host your own instance of EduMaths, ensuring maximum privacy control."
             }
           },
           {
             "@type": "Question",
-            "name": "How fast and advanced is Holy Unblocker?",
+            "name": "How fast and advanced is EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker is a fast and highly advanced web proxy service, featuring CAPTCHA integration, TOR browsing, customizable blacklist settings, leak prevention mechanisms, robust security measures, and extensive site compatibility via Ultraviolet + Wisp."
+              "text": "EduMaths is a fast and highly advanced web proxy service, featuring CAPTCHA integration, TOR browsing, customizable blacklist settings, leak prevention mechanisms, robust security measures, and extensive site compatibility via Ultraviolet + Wisp."
             }
           },
           {
             "@type": "Question",
-            "name": "Can I self-host Holy Unblocker for better privacy?",
+            "name": "Can I self-host EduMaths for better privacy?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes, you can easily fork the Holy Unblocker repository and self-host it for maximum privacy control, ensuring no user data is collected."
+              "text": "Yes, you can easily fork the EduMaths repository and self-host it for maximum privacy control, ensuring no user data is collected."
             }
           },
           {
             "@type": "Question",
-            "name": "What makes Holy Unblocker different from other web proxy services?",
+            "name": "What makes EduMaths different from other web proxy services?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker stands out with its transparency and privacy control, collecting no user data. It leverages custom source randomization and projects like Epoxy, Wisp, and Scramjet to effectively bypass web and network filters."
+              "text": "EduMaths stands out with its transparency and privacy control, collecting no user data. It leverages custom source randomization and projects like Epoxy, Wisp, and Scramjet to effectively bypass web and network filters."
             }
           },
           {
             "@type": "Question",
-            "name": "What design principles does Holy Unblocker follow?",
+            "name": "What design principles does EduMaths follow?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker uses the Nord Theme for its optimal design color palette, prioritizing readable code syntax and user-friendly UI components."
+              "text": "EduMaths uses the Nord Theme for its optimal design color palette, prioritizing readable code syntax and user-friendly UI components."
             }
           },
           {
             "@type": "Question",
-            "name": "How do I start using Holy Unblocker?",
+            "name": "How do I start using EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
               "text": "Head to the Web Proxies page and select one of the featured proxies. Then, type the site you wish to access in the search box. Each web proxy has its own level of effectiveness, speed, and security. Scramjet is highly recommended for the best experience."
@@ -228,31 +228,31 @@
           },
           {
             "@type": "Question",
-            "name": "What pre-linked applications does Holy Unblocker feature?",
+            "name": "What pre-linked applications does EduMaths feature?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker features a collection of pre-linked applications, including YouTube, Spotify, Webretro (an online everything emulator), Ruffle.fs (Adobe Flash Emulator), and an expansive library for each respective app."
+              "text": "EduMaths features a collection of pre-linked applications, including YouTube, Spotify, Webretro (an online everything emulator), Ruffle.fs (Adobe Flash Emulator), and an expansive library for each respective app."
             }
           },
           {
             "@type": "Question",
-            "name": "Is Holy Unblocker planning to support more applications?",
+            "name": "Is EduMaths planning to support more applications?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes, Holy Unblocker is soon to support the Anura games library, expanding its range of pre-linked applications."
+              "text": "Yes, EduMaths is soon to support the Anura games library, expanding its range of pre-linked applications."
             }
           },
           {
             "@type": "Question",
-            "name": "How do I deploy Holy Unblocker on my own server?",
+            "name": "How do I deploy EduMaths on my own server?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker is designed to be easy to deploy and use on personal setups or production loads. Detailed guides can be found at the official GitHub repository and Titanium Network Docs."
+              "text": "EduMaths is designed to be easy to deploy and use on personal setups or production loads. Detailed guides can be found at the official GitHub repository and Titanium Network Docs."
             }
           },
           {
             "@type": "Question",
-            "name": "Where is the default proxy location when starting Holy Unblocker?",
+            "name": "Where is the default proxy location when starting EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
               "text": "The default place for the proxy when started is http://localhost:8080. You can change this setting if needed in config.json. This website is hosted locally with Scramjet, Ultraviolet and Rammerhead built-in."
@@ -260,10 +260,10 @@
           },
           {
             "@type": "Question",
-            "name": "How can I contribute to Holy Unblocker?",
+            "name": "How can I contribute to EduMaths?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker thrives thanks to its contributors. You can get involved in various ways, including design, core development, applications and games, documentation, and testing and QA. Visit our GitHub repository and join our Discord server to get started."
+              "text": "EduMaths thrives thanks to its contributors. You can get involved in various ways, including design, core development, applications and games, documentation, and testing and QA. Visit our GitHub repository and join our Discord server to get started."
             }
           }
         ]
@@ -322,10 +322,10 @@
             <p>
               <span class="cmd"
                 >git clone --recurse-submodules<span class="url">
-                  {{mask}}{{https://github.com/QuiteAFancyEmerald/Holy-Unblocker.git}}</span
+                  {{mask}}{{https://github.com/QuiteAFancyEmerald/EduMaths.git}}</span
                 >&#13;</span
               ><br />
-              <span class="cmd">cd {{mask}}{{Holy-Unblocker}}&#13;</span><br />
+              <span class="cmd">cd {{mask}}{{EduMaths}}&#13;</span><br />
               <span class="comment"
                 >Recommended you switch branches to a production branch such as
                 v6.x instead of master.</span
@@ -335,7 +335,7 @@
               <span class="comment">Or on subsequent uses...</span><br />
               <span class="cmd">npm restart&#13;</span><br /><br />
               <span class="comment"
-                >{{mask}}{{Holy Unblocker LTS}} v{{version}} // master</span
+                >{{mask}}{{EduMaths LTS}} v{{version}} // master</span
               ><br />
               <span class="comment">Node.js v20.x</span><br />
               <span class="comment">Fastify v5.4.0</span><br /><br />
@@ -357,7 +357,7 @@
               <div class="brand-logo-container">
                 <i class="far fa-window-restore palered"></i>
                 <h2 class="hero-content-header">
-                  {{mask}}{{Holy Unblocker is free.}}
+                  {{mask}}{{EduMaths is free.}}
                 </h2>
               </div>
               <p>
@@ -370,7 +370,7 @@
               <div class="brand-logo-container">
                 <i class="far fa-window-restore palered"></i>
                 <h2 class="hero-content-header">
-                  {{mask}}{{Holy Unblocker is fast and highly advanced.}}
+                  {{mask}}{{EduMaths is fast and highly advanced.}}
                 </h2>
               </div>
               <p>
@@ -386,7 +386,7 @@
               <div class="brand-logo-container">
                 <i class="far fa-window-restore palered"></i>
                 <h2 class="hero-content-header">
-                  {{mask}}{{Holy Unblocker is practical.}}
+                  {{mask}}{{EduMaths is practical.}}
                 </h2>
               </div>
               <p>
@@ -583,7 +583,7 @@
             <div class="text-wrap">
               <h1>Overview</h1>
               <p>
-                {{mask}}{{ Holy Unblocker LTS, an experimental web proxy
+                {{mask}}{{ EduMaths LTS, an experimental web proxy
                 service, can bypass web filters or 'blockers' regardless of
                 whether the method of censorship is client-side or
                 network-based. This includes the ability to bypass content
@@ -685,7 +685,7 @@
             <div class="text-wrap">
               <h1>{{mask}}{{Hosting and Deployment}}</h1>
               <p>
-                <strong>{{mask}}{{Holy Unblocker LTS}}</strong> {{mask}}{{is an
+                <strong>{{mask}}{{EduMaths LTS}}</strong> {{mask}}{{is an
                 open-source solution designed with modularity, ease of use, and
                 easy deployment in mind. Key features include ad-blocking,
                 flexible source code generation, and advanced proxy
@@ -694,7 +694,7 @@
                 official}}
                 <a
                   href="{{route}}{{/github}}"
-                  title="{{mask}}{{Holy Unblocker LTS}} GitHub Repository"
+                  title="{{mask}}{{EduMaths LTS}} GitHub Repository"
                   target="_blank"
                   rel="noopener noreferrer"
                   >GitHub repository</a
@@ -719,7 +719,7 @@
               class="hero"
               src="{{route}}{{/assets/img/hosting.webp}}"
               alt="{{mask}}{{Hosting and Deployment Icon}}"
-              title="{{mask}}{{Hosting and Deployment for Holy Unblocker LTS}}"
+              title="{{mask}}{{Hosting and Deployment for EduMaths LTS}}"
             />
           </div>
         </div>
@@ -728,7 +728,7 @@
             <div class="text-wrap">
               <h1>Contributing</h1>
               <p>
-                <strong>{{mask}}{{Holy Unblocker LTS}}</strong>
+                <strong>{{mask}}{{EduMaths LTS}}</strong>
                 {{mask}}{{thrives due to the dedicated efforts of our amazing
                 contributors. As an open-source project,}}
                 <strong>{{mask}}{{HU LTS}}</strong> {{mask}}{{relies on the
@@ -740,14 +740,14 @@
                 To start contributing, visit our
                 <a
                   href="{{route}}{{/github}}"
-                  title="{{mask}}{{Holy Unblocker LTS GitHub Repository}}"
+                  title="{{mask}}{{EduMaths LTS GitHub Repository}}"
                   target="_blank"
                   rel="noopener noreferrer"
                   >GitHub repository</a
                 >, and join our
                 <a
                   href="{{route}}{{/titaniumnetwork-discord}}"
-                  title="{{mask}}{{Holy Unblocker LTS Discord Server}}"
+                  title="{{mask}}{{EduMaths LTS Discord Server}}"
                   target="_blank"
                   rel="noopener noreferrer"
                   >{{mask}}{{Discord server}}</a
@@ -778,8 +778,8 @@
                 </h2>
               </div>
               <p>
-                {{mask}}{{Great Firewall of China? Censorship? No problem. Holy
-                Unblocker LTS is an open-source}}
+                {{mask}}{{Great Firewall of China? Censorship? No problem. EduMaths
+                EduMaths LTS is an open-source}}
                 <strong>{{mask}}{{public web proxy}}</strong>{{mask}}{{. Enjoy
                 unrestricted access to online content and secure browsing with
                 our advanced}}
