--- a/views/pages/frame.html
+++ b/views/pages/frame.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>{{mask}}{{Holy Unblocker LTS}}</title>
+    <title>{{mask}}{{EduMaths}}</title>
     {{ifSEO}}{{
     <meta
       name="description"
-      content="Holy Unblocker is a secure web proxy service with support for many sites. Bypass filters and freely enjoy a safer private browsing experience or unblock websites on devices such as Chromebooks and at places like school or work without downloading anything."
+      content="EduMaths is a secure web proxy service with support for many sites. Bypass filters and freely enjoy a safer private browsing experience or unblock websites on devices such as Chromebooks and at places like school or work without downloading anything."
     />
     }}
     <!--HEAD-CONTENT-->
@@ -27,7 +27,7 @@
       <div class="loader-w"></div>
     </div>
     <div class="omnibar" id="pr-sj">
-      <div class="logo" role="img" aria-label="Holy Unblocker Logo"></div>
+      <div class="logo" role="img" aria-label="EduMaths Logo"></div>
       <button title="Back"><i class="fas fa-arrow-left"></i></button>
       <button title="Forward"><i class="fas fa-arrow-right"></i></button>
       <button title="Refresh"><i class="fas fa-redo-alt"></i></button>
