--- a/views/pages/proxnav/rammerhead.html
+++ b/views/pages/proxnav/rammerhead.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{{mask}}{{Holy Unblocker LTS | Rammerhead Proxy}}</title>
+    <title>{{mask}}{{EduMaths | Rammerhead Proxy}}</title>
     {{ifSEO}}{{
     <meta
       name="description"
