--- a/views/pages/misc/deobf/header.html
+++ b/views/pages/misc/deobf/header.html
@@ -3,15 +3,15 @@
     class="logo"
     role="img"
     {{ifSEO}}{{
-    aria-label="Holy Unblocker Logo"
+    aria-label="EduMaths Logo"
     }}
   ></div>
   <a
     href="{{route}}{{/}}"
     class="brand pulse"
-    title="{{mask}}{{Holy Unblocker Home Page}}"
+    title="{{mask}}{{EduMaths Home Page}}"
   >
-    {{mask}}{{Holy Unblocker v6.9.x}}
+    {{mask}}{{EduMaths v6.9.x}}
   </a>
 </div>
 
