--- a/views/pages/misc/deobf/footer.html
+++ b/views/pages/misc/deobf/footer.html
@@ -1,8 +1,8 @@
 <div class="footerflex">
   <div class="footerbrand">
     <h3>
-      <a href="/" title="{{mask}}{{Holy Unblocker Homepage}}"
-        >{{mask}}{{Holy Unblocker}}</a
+      <a href="/" title="{{mask}}{{EduMaths Homepage}}"
+        >{{mask}}{{EduMaths}}</a
       >
     </h3>
     <p>{{mask}}{{Global Web Proxy Innovation, Done Right.}}</p>
@@ -130,7 +130,7 @@
           target="_blank"
           rel="noopener noreferrer"
           href="{{route}}{{/github}}"
-          title="{{mask}}{{Holy Unblocker GitHub Repository}}"
+          title="{{mask}}{{EduMaths GitHub Repository}}"
           >{{mask}}{{GitHub}}</a
         >
       </li>
@@ -160,7 +160,7 @@
     rel="noopener noreferrer"
     class="soc-github"
     href="{{route}}{{/github}}"
-    title="Follow {{mask}}{{Holy Unblocker on GitHub}}"
+    title="Follow {{mask}}{{EduMaths on GitHub}}"
     ><i class="fab fa-github" aria-hidden="true"></i
   ></a>
   <a
@@ -172,4 +172,4 @@
     ><i class="fas fa-file-code" aria-hidden="true"></i
   ></a>
 </div>
-<p class="copyright">{{mask}}{{Holy Unblocker LTS &copy; 2020-2025}}</p>
+<p class="copyright">{{mask}}{{EduMaths &copy; 2020-2025}}</p>
